# cmake-learn

./: README.md
code/exp2/: CMakeLists.txt
code/exp2/lib/: CMakeLists.txt  hello_lib.c
code/exp2/src/: CMakeLists.txt  hello_main.c
code/exp3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libpng-short-example.c
code/exp4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code/exp5/: CMakeLists.txt
code/exp5/lib/: CMakeLists.txt
code/exp5/src/: CMakeLists.txt  hello.cpp
